--- a/style.css
+++ b/style.css
@@ -30,9 +30,12 @@ body {
 }
 
 h1 {
-  text-align: center;
-  margin-bottom: 4rem;
+  text-align: left; /* Pour aligner le texte à gauche */
+  margin-top: 0; /* Pour supprimer la marge par défaut du haut */
+  margin-bottom: 0; /* Pour supprimer la marge par défaut du bas */
+  padding-top: 20px; /* Pour ajouter un padding en haut */
 }
+
 
 input,
 select {
