--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   justify-content: center;
   color: white;
   font-family: sans-serif;
-  background-color: #8bc6ec;
+  background-color: #FFF;
   background-image: linear-gradient(135deg, #8bc6ec 0%, #9599e2 100%);
 }
 
