--- a/main.css
+++ b/main.css
@@ -1,1 +1,107 @@
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
 
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.sidebar {
+  background-color: #262a2f;
+  color: white;
+  padding: 20px;
+  width: 200px;
+  height: 100vh;
+  transform: translateX(-100%);
+  transition: transform 0.3s ease;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+
+.sidebar.open {
+  transform: translateX(0);
+}
+
+.content {
+  padding-left: 0;
+  transition: padding-left 0.3s ease;
+}
+
+.sidebar.open + .content {
+  padding-left: 200px;
+}
+
+header {
+  background-color: #262a2f;
+  color: white;
+  text-align: center;
+  padding: 40px 0;
+}
+
+h1 {
+  font-size: 36px;
+  margin-bottom: 10px;
+}
+.sidebar h2 {
+  padding-top: 40px; /* Ajout de padding en haut du titre pour le décaler vers le bas */
+  margin-bottom: 20px; /* Espacement entre le titre et les liens */
+}
+
+
+
+.subheader {
+  font-size: 18px;
+}
+
+.features {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 40px 0;
+}
+
+.feature {
+  text-align: center;
+  width: 300px;
+  margin: 20px;
+}
+
+.feature img {
+  width: 100px;
+  height: 100px;
+  margin-bottom: 20px;
+}
+
+footer {
+  background-color: #262a2f;
+  color: white;
+  text-align: center;
+  padding: 20px 0;
+  margin-top: auto;
+}
+
+/* Styles pour le bouton d'ouverture */
+#toggleButton {
+  position: fixed;
+  top: 0px;
+  left: 20px;
+  z-index: 1001;
+  padding: 10px 15px;
+  background-color: #262a2f;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin-battom: 5px;
+}
+
+#toggleButton:hover {
+  background-color: #494eea;
+}
