--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   color: white;
   font-family: sans-serif;
   background-color: #FFF;
-  background-image: linear-gradient(135deg, #8bc6ec 0%, #9599e2 100%);
+  background-image: #262a2f;
 }
 
 .wrapper {
