--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body {
 }
 
 .sidebar {
-  background-color: linear-gradient(135deg, #8bc6ec 0%, #9599e2 100%);
+  background-color: #262a2f;
   color: white;
   padding: 20px;
   width: 200px;
