--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@ body {
   justify-content: center;
   color: white;
   font-family: sans-serif;
-  background-color: #FFF;
-  background-image: #262a2f;
+  background-color: #262a2f;
 }
 
 .wrapper {
