--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@ body {
   font-family: sans-serif;
   background-color: #262a2f;
 }
+.site-name {
+  font-size: 24px; /* Taille de la police */
+  font-weight: bold; /* Poids de la police */
+  color: #FFF; 
+  position: absolute; /* Position absolue pour le placer dans le coin supérieur gauche */
+  top: 10px; /* Distance du haut */
+  left: 10px; /* Distance de la gauche */
+        }
 
 .wrapper {
   border-radius: 1rem;
